# activation-steering-lab

./: .gitignore  CACHE_SETUP.md  CLAUDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VISUAL_COMPARISON.md  claude.md  pyproject.toml  requirements.txt  run.sh  setup_local_cache.sh  test_cache.py  test_setup.py  test_steering.py  test_strengths.py
activation_steering_lab/: __init__.py  educational_content.py  injection_engine.py  main.py  model_wrapper.py  threejs_export.py  threejs_simple.py  vector_library.py  visualization.py
activation_steering_lab/mocked_data/: HOW_TO_TEST.md  PHASE1_COMPLETE.md  README.md  generate_mock_data.py  generate_single_sample.py  happy_layer16_20251103_161946.json  test_export.py  test_integration.py  test_sample.json
activation_steering_lab/models_cache/: README.md
activation_steering_lab/threejs_brain_viewer/: README.md  pyproject.toml
activation_steering_lab/threejs_brain_viewer/backend/gradio_threejs_brain_viewer/: __init__.py  threejs_brain_viewer.py
activation_steering_lab/threejs_brain_viewer/demo/: app.py  requirements.txt  space.py
activation_steering_lab/threejs_brain_viewer/frontend/: BrainScene.js  Index.svelte  package-lock.json  package.json
docs/: CACHE_SETUP.md  FEATURE_ACTIVATION_VISUALIZATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  THREEJS_MRI_VISUALIZATION.md  claude.md
scripts/: setup_local_cache.sh
tests/: __init__.py  test_cache.py  test_model_wrapper.py  test_setup.py  test_steering.py  test_strengths.py  test_visualization.py  test_viz_performance.py  test_viz_real_model.py
